--- a/app/modules/inventory/scss/_import.scss
+++ b/app/modules/inventory/scss/_import.scss
@@ -7,7 +7,7 @@
   section{
     margin-top: 0;
   }
-  .warning{
+  .warning:not(:empty){
     margin-top: 1em;
   }
 }
@@ -39,10 +39,6 @@
       padding: 0;
       font-size: 0.8em;
       color: #888;
-    }
-    input{
-      margin: 0;
-      padding: 0.8em 0 0.8em 1em;
     }
     &:not(:last-child){
       border-bottom: 1px solid #bbb;
